Add new feature

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     p {
       color: #f0f0f0;
       font-size: 1.2rem;
+      max-width: 800px;
+      padding: 0 20px;
     }
 
     .btn {
@@ -51,6 +53,9 @@
 <body>
   <h1>Welcome to My Webpage</h1>
   <p>This is a beautiful HTML page with background color and buttons!</p>
+  <p>Git and GitHub make it easier for developers to collaborate and manage their codebase effectively.</p>
+  <p>With GitHub Desktop, beginners can easily push, pull, and commit changes with a user-friendly interface.</p>
+  <p>Feel free to explore, edit this page, and make it your own project to publish on GitHub Pages!</p>
   <button class="btn">Click Me</button>
 </body>
 </html>
